--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </ul>
   </nav>
   
-  <section>
-    <h1>About</h1>
+  <section class="me">
+    <h1 id="about">About</h1>
     <img src="person.jpg">
-    <p>My name is Brandon</p>
+    <p id="description">My name is Brandon</p>
   </section>
   <script src="script.js"></script>
 
